2.07   2007-01-30
        * Allow for CGI::Ex::Template PLUGIN_BASE to be a scalar OR an arrayref.
        * Add sort keys to DUMP directive
        * Add trim_control_chars as a validate directive

2.06   2006-07-21
        * Allow for JSONDump to swap --> to --"+">
        * Fix memory issue in App with closures
        * Remove weak_copy routine from Template (memory issue)

2.05   2006-07-19
        * Allow for CGI::Ex to be compatible with Mandrake and Fedora mod_perl 2, as well as debian mod_perl2
          and older mod_perl1.
        * Allow for CGI::Ex::Dump to localize the Data::Dumper options to not stomp on anybody elses toes.
        * Update various perldoc bugs
        * Fix JSONDump of \t and \r
        * Change .as to .fmt to coincide with Perl6 (.as is still there - just not documented)

2.04   2006-07-10
        * Allow for items not in group order to get added to validation correctly in CGI::Ex::Validate.
        * Add samples/index.cgi
        * Fix samples/app/cgi_ex_* to actually work.
        * Added CGI::Ex::JSONDump
        * Change Validate to use JSONDump instaed of JSON
        * Various perldoc and other bug fixes.
        * Removed CGI-Ex.spec - use cpan2rpm or cpan2deb instead.

2.03   2006-06-10
        * Fix the associativity of operators in Template to match perl
        * Allow for multiple prefix operators.
        * Change name of parse_variable to parse_expr
        * Change name of get_variable to play_expr

2.02   2006-06-08
        * Fix the yaml tests
        * Add failed_sleep to Auth
        * Various pod fixes
        * Allow for conf_read and write errors to die - we really do need to have those bubble up.
        * Fix all tests
        * Allow for validate.js to work with existing onsubmit handlers of forms
        * Added "as" virtual methods to Template
        * Added Virtual Objects to Template
        * Added self modifiers (*= etc) to Template
        * Added increment and decrement (++ --) to Template